Estructura de la página, además de sus respectivos estilos.

--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,20 @@
 </head>
 <body>
     <div class="app">
-        
+        <div class="container">
+            <h1 class="title">
+                Sumar 2 cantidades
+            </h1>
+
+            <div class="inputGroup">
+
+            </div>
+
+            <div class="inputGroup">
+                
+            </div>
+
+        </div>
     </div>
 </body>
 </html>
