Estructura terminada, faltan agregar estilos

--- a/html/index.html
+++ b/html/index.html
@@ -15,14 +15,20 @@
             </h1>
 
             <div class="inputGroup">
-
+                <input type="text" class="input">
+            <div class="inputGroup">
+                <input type="text" class="input">
             </div>
 
-            <div class="inputGroup">
-                
+            <div class="buttonGroup">
+                <button class="button">
+                    Sumar
+                </button>
             </div>
 
         </div>
     </div>
+    <script src="https://kit.fontawesome.com/7f4f5e3479.js" crossorigin="anonymous"></script>
+
 </body>
 </html>
