Nuevos elementos al formuario, y estilos añadidos, faltan retoques

--- a/html/index.html
+++ b/html/index.html
@@ -16,6 +16,8 @@
 
             <div class="inputGroup">
                 <input type="text" class="input">
+            </div>
+
             <div class="inputGroup">
                 <input type="text" class="input">
             </div>
@@ -27,6 +29,13 @@
             </div>
 
         </div>
+
+        <div class="results">
+            <div class="result">
+                
+            </div>
+        </div>
+
     </div>
     <script src="https://kit.fontawesome.com/7f4f5e3479.js" crossorigin="anonymous"></script>
 
