--- a/html/index.html
+++ b/html/index.html
@@ -14,27 +14,28 @@
                 Sumar 2 cantidades
             </h1>
 
-            <div class="inputGroup">
-                <input type="text" class="input">
+            <div class="inputGroup" id="inputGroup-1">
+                <input type="text" class="input" id="input-1">
             </div>
 
-            <div class="inputGroup">
-                <input type="text" class="input">
+            <div class="inputGroup" id="inputGroup-2">
+                <input type="text" class="input" id="input-2">
             </div>
 
             <div class="buttonGroup">
-                <button class="button">
+                <button class="button" id="button-form">
                     Sumar
                 </button>
             </div>
 
         </div>
 
-        <div class="results">
+        <div class="results" id="containerResults">
             
         </div>
 
     </div>
+    <script src="/scripts/index.js"></script>
     <script src="https://kit.fontawesome.com/7f4f5e3479.js" crossorigin="anonymous"></script>
 
 </body>
